--- a/_output.yml
+++ b/_output.yml
@@ -18,8 +18,8 @@ bookdown::gitbook:
     sharing:
       github: yes
       facebook: yes
-    html_document:
-      code_folding: hide
+    html_document2:
+      collapse: TRUE
 bookdown::pdf_book:
   includes:
     in_header: latex/preamble.tex
