--- a/_output.yml
+++ b/_output.yml
@@ -2,9 +2,9 @@ bookdown::gitbook:
   css: [css/style.css, css/toc.css, css/highlight.css]
   config:
     toc:
-      toc_depth: 1
+      toc_depth: 2
       toc_float: 
-        collapsed: FALSE
+        collapsed: yes
       scroll_highlight: yes
       before: |
         <li><a href="./">300 Bài code Data</a></li>
