--- a/_output.yml
+++ b/_output.yml
@@ -2,9 +2,8 @@ bookdown::gitbook:
   css: [css/style.css, css/toc.css, css/highlight.css]
   config:
     toc:
-      toc_depth: 1
-      toc_float: 
-        collapsed: yes
+      toc_depth: 2
+      collapse: subsection
       scroll_highlight: yes
       before: |
         <li><a href="./">300 Bài code Data</a></li>
